@@ -3,21 +3,12 @@ package org.training.meetingroombooking.service.impl;
 import jakarta.persistence.criteria.Join;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.apache.poi.ss.usermodel.Cell;
-import org.apache.poi.ss.usermodel.CellStyle;
-import org.apache.poi.ss.usermodel.Font;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -34,23 +25,20 @@ import org.training.meetingroombooking.entity.models.Position;
 import org.training.meetingroombooking.entity.models.Role;
 import org.training.meetingroombooking.entity.models.User;
 import org.training.meetingroombooking.exception.AppEx;
-import org.training.meetingroombooking.repository.GroupRepository;
-import org.training.meetingroombooking.repository.PositionRepository;
-import org.training.meetingroombooking.repository.RoleRepository;
-import org.training.meetingroombooking.repository.RoomBookingRepository;
-import org.training.meetingroombooking.repository.UserRepository;
+import org.training.meetingroombooking.repository.*;
 import org.training.meetingroombooking.service.UserService;
 
+/** Service xử lý nghiệp vụ User. */
 @Service
 public class UserServiceImpl implements UserService {
 
-  private final RoleRepository roleRepository;
   private final UserRepository userRepository;
+  private final RoleRepository roleRepository;
+  private final PositionRepository positionRepository;
+  private final GroupRepository groupRepository;
   private final RoomBookingRepository roomBookingRepository;
   private final UserMapper userMapper;
   private final PasswordEncoder passwordEncoder;
-  private final PositionRepository positionRepository;
-  private final GroupRepository groupRepository;
 
   public UserServiceImpl(
       UserRepository userRepository,
@@ -62,12 +50,13 @@ public class UserServiceImpl implements UserService {
     this.userRepository = userRepository;
     this.roleRepository = roleRepository;
     this.userMapper = userMapper;
-    this.passwordEncoder = new BCryptPasswordEncoder(10);
     this.positionRepository = positionRepository;
     this.groupRepository = groupRepository;
     this.roomBookingRepository = roomBookingRepository;
+    this.passwordEncoder = new BCryptPasswordEncoder(10);
   }
 
+  @Override
   public UserResponse createUser(UserRequest request) {
     if (userRepository.existsByUserName(request.getUserName())) {
       throw new AppEx(ErrorCode.USERNAME_ALREADY_EXISTS);
@@ -75,6 +64,10 @@ public class UserServiceImpl implements UserService {
     if (userRepository.existsByEmail(request.getEmail())) {
       throw new AppEx(ErrorCode.EMAIL_ALREADY_EXISTS);
     }
+    if (request.getPassword() == null || request.getPassword().isBlank()) {
+      throw new AppEx(ErrorCode.PASSWORD_NULL);
+    }
+
     Position position =
         positionRepository
             .findById(request.getPosition())
@@ -83,28 +76,26 @@ public class UserServiceImpl implements UserService {
         groupRepository
             .findById(request.getGroup())
             .orElseThrow(() -> new AppEx(ErrorCode.GROUP_NOT_FOUND));
-    Set<Role> existingRoles = roleRepository.findByRoleNameIn(request.getRoles());
-    Set<String> existingRoleNames =
-        existingRoles.stream().map(Role::getRoleName).collect(Collectors.toSet());
-    Set<String> invalidRoles =
-        request.getRoles().stream()
-            .filter(role -> !existingRoleNames.contains(role))
-            .collect(Collectors.toSet());
-    if (!invalidRoles.isEmpty()) {
+
+    Set<Role> roles = roleRepository.findByRoleNameIn(request.getRoles());
+    if (roles.isEmpty()
+        || !roles.stream()
+            .map(Role::getRoleName)
+            .collect(Collectors.toSet())
+            .containsAll(request.getRoles())) {
       throw new AppEx(ErrorCode.ROLE_NOT_FOUND);
     }
+
     User user = userMapper.toEntity(request);
-    if (request.getPassword() == null || request.getPassword().isEmpty()) {
-      throw new AppEx(ErrorCode.PASSWORD_NULL);
-    }
     user.setPassword(passwordEncoder.encode(request.getPassword()));
     user.setPosition(position);
     user.setGroup(group);
-    user.setRoles(new HashSet<>(existingRoles));
-    User savedUser = userRepository.save(user);
-    return userMapper.toUserResponse(savedUser);
+    user.setRoles(roles);
+
+    return userMapper.toUserResponse(userRepository.save(user));
   }
 
+  @Override
   public Page<UserResponse> getUsers(
       String fullName,
       String department,
@@ -116,75 +107,54 @@ public class UserServiceImpl implements UserService {
     Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "userId"));
     Specification<User> spec = Specification.where(null);
 
-    if (fullName != null && !fullName.isEmpty()) {
+    if (fullName != null && !fullName.isBlank()) {
       spec =
           spec.and(
               (root, query, cb) ->
                   cb.like(cb.lower(root.get("fullName")), "%" + fullName.toLowerCase() + "%"));
     }
-    if (department != null && !department.isEmpty()) {
+    if (department != null && !department.isBlank()) {
       spec =
           spec.and(
               (root, query, cb) ->
                   cb.like(cb.lower(root.get("department")), "%" + department.toLowerCase() + "%"));
     }
-    if (positions != null && !positions.isEmpty()) {
-      spec =
-          spec.and(
-              (root, query, cb) -> {
-                Join<User, Position> positionJoin = root.join("position");
-                return positionJoin.get("positionName").in(positions);
-              });
-      spec =
-          spec.and(
-              (root, query, cb) -> {
-                query.distinct(true);
-                return cb.conjunction();
-              });
-    }
-    if (groups != null && !groups.isEmpty()) {
-      spec =
-          spec.and(
-              (root, query, cb) -> {
-                Join<User, GroupEntity> groupJoin = root.join("group");
-                return groupJoin.get("groupName").in(groups);
-              });
-      spec =
-          spec.and(
-              (root, query, cb) -> {
-                query.distinct(true);
-                return cb.conjunction();
-              });
-    }
-    if (roles != null && !roles.isEmpty()) {
-      spec =
-          spec.and(
-              (root, query, cb) -> {
-                Join<User, Role> roleJoin = root.join("roles");
-                return roleJoin.get("roleName").in(roles);
-              });
-      spec =
-          spec.and(
-              (root, query, cb) -> {
-                query.distinct(true);
-                return cb.conjunction();
-              });
-    }
-    Page<User> usersPage = userRepository.findAll(spec, pageable);
-    return usersPage.map(userMapper::toUserResponse);
+    spec = addJoinFilter(spec, positions, "position", "positionName");
+    spec = addJoinFilter(spec, groups, "group", "groupName");
+    spec = addJoinFilter(spec, roles, "roles", "roleName");
+
+    return userRepository.findAll(spec, pageable).map(userMapper::toUserResponse);
   }
 
+  /** Thêm điều kiện join và distinct cho Specification. */
+  private Specification<User> addJoinFilter(
+      Specification<User> spec, Set<String> values, String attribute, String fieldName) {
+    if (values == null || values.isEmpty()) {
+      return spec;
+    }
+    return spec.and(
+        (root, query, cb) -> {
+          @SuppressWarnings("unchecked")
+          Join<Object, Object> join = root.join(attribute);
+          query.distinct(true);
+          return join.get(fieldName).in(values);
+        });
+  }
+
+  @Override
   public List<UserResponse> getAll() {
-    return userRepository.findAll().stream().map(userMapper::toUserResponse).toList();
+    return userRepository.findAll().stream()
+        .map(userMapper::toUserResponse)
+        .collect(Collectors.toList());
   }
 
+  @Override
   public ByteArrayOutputStream exportUserToExcel() throws IOException {
-    List<UserResponse> userResponses = getAll();
+    List<UserResponse> users = getAll();
     try (Workbook workbook = new XSSFWorkbook();
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
+        ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+
       Sheet sheet = workbook.createSheet("Users");
-      // Tạo hàng tiêu đề
-      Row headerRow = sheet.createRow(0);
       String[] headers = {
         "UserName",
         "FullName",
@@ -194,134 +164,144 @@ public class UserServiceImpl implements UserService {
         "Roles",
         "Group",
         "Position",
-        "isEnabled"
+        "Enabled"
       };
+      Row headerRow = sheet.createRow(0);
+      CellStyle headerStyle = workbook.createCellStyle();
+      Font font = workbook.createFont();
+      font.setBold(true);
+      headerStyle.setFont(font);
+
       for (int i = 0; i < headers.length; i++) {
         Cell cell = headerRow.createCell(i);
         cell.setCellValue(headers[i]);
-        CellStyle style = workbook.createCellStyle();
-        Font font = workbook.createFont();
-        font.setBold(true);
-        style.setFont(font);
-        cell.setCellStyle(style);
+        cell.setCellStyle(headerStyle);
       }
+
       int rowNum = 1;
-      for (UserResponse user : userResponses) {
+      for (UserResponse u : users) {
         Row row = sheet.createRow(rowNum++);
-        row.createCell(0).setCellValue(user.getUserName() != null ? user.getUserName() : "N/A");
-        row.createCell(1).setCellValue(user.getFullName() != null ? user.getFullName() : "N/A");
-        row.createCell(2).setCellValue(user.getEmail() != null ? user.getEmail() : "N/A");
-        row.createCell(3)
-            .setCellValue(user.getPhoneNumber() != null ? user.getPhoneNumber() : "N/A");
-        row.createCell(4).setCellValue(user.getDepartment() != null ? user.getDepartment() : "N/A");
-        Set<String> roles = user.getRoles();
-        String rolesString = (roles != null && !roles.isEmpty()) ? String.join(", ", roles) : "N/A";
-        row.createCell(5).setCellValue(rolesString);
-        row.createCell(6).setCellValue(user.getGroupName() != null ? user.getGroupName() : "N/A");
-        row.createCell(7)
-            .setCellValue(user.getPositionName() != null ? user.getPositionName() : "N/A");
-        row.createCell(8).setCellValue(user.isEnabled());
+        row.createCell(0).setCellValue(u.getUserName());
+        row.createCell(1).setCellValue(u.getFullName());
+        row.createCell(2).setCellValue(u.getEmail());
+        row.createCell(3).setCellValue(u.getPhoneNumber());
+        row.createCell(4).setCellValue(u.getDepartment());
+        row.createCell(5).setCellValue(String.join(", ", u.getRoles()));
+        row.createCell(6).setCellValue(u.getGroupName());
+        row.createCell(7).setCellValue(u.getPositionName());
+        row.createCell(8).setCellValue(u.isEnabled());
       }
+
       for (int i = 0; i < headers.length; i++) {
         sheet.autoSizeColumn(i);
       }
-      workbook.write(outputStream);
-      return outputStream;
+
+      workbook.write(out);
+      return out;
     }
   }
 
-  public UserResponse getById(long userId) {
+  @Override
+  public UserResponse getById(Long userId) {
     User user =
         userRepository.findById(userId).orElseThrow(() -> new AppEx(ErrorCode.USER_NOT_FOUND));
     return userMapper.toUserResponse(user);
   }
 
+  @Override
   public UserResponse getMyInfo() {
-    var context = SecurityContextHolder.getContext();
-    String name = context.getAuthentication().getName();
+    String currentUser = SecurityContextHolder.getContext().getAuthentication().getName();
     User user =
-        userRepository.findByUserName(name).orElseThrow(() -> new AppEx(ErrorCode.USER_NOT_FOUND));
+        userRepository
+            .findByUserName(currentUser)
+            .orElseThrow(() -> new AppEx(ErrorCode.USER_NOT_FOUND));
     return userMapper.toUserResponse(user);
   }
 
+  @Override
   public UserResponse update(Long userId, UserRequest request) {
     User user =
         userRepository.findById(userId).orElseThrow(() -> new AppEx(ErrorCode.USER_NOT_FOUND));
+
     if (request.getUserName() != null
         && !request.getUserName().equals(user.getUserName())
         && userRepository.existsByUserName(request.getUserName())) {
       throw new AppEx(ErrorCode.USERNAME_ALREADY_EXISTS);
     }
     if (request.getPosition() != null) {
-      Position position =
+      Position pos =
           positionRepository
               .findById(request.getPosition())
               .orElseThrow(() -> new AppEx(ErrorCode.POSITION_NOT_FOUND));
-      user.setPosition(position);
+      user.setPosition(pos);
     }
     if (request.getGroup() != null) {
-      GroupEntity group =
+      GroupEntity grp =
           groupRepository
               .findById(request.getGroup())
               .orElseThrow(() -> new AppEx(ErrorCode.GROUP_NOT_FOUND));
-      user.setGroup(group);
+      user.setGroup(grp);
     }
+
     userMapper.updateEntity(user, request);
-    if (request.getPassword() != null && !request.getPassword().trim().isEmpty()) {
+
+    if (request.getPassword() != null && !request.getPassword().isBlank()) {
       user.setPassword(passwordEncoder.encode(request.getPassword()));
     }
     if (request.getRoles() != null && !request.getRoles().isEmpty()) {
-      Set<Role> roles = new HashSet<>(roleRepository.findByRoleNameIn(request.getRoles()));
-      if (roles.isEmpty()) {
+      Set<Role> rs = roleRepository.findByRoleNameIn(request.getRoles());
+      if (rs.isEmpty()) {
         throw new AppEx(ErrorCode.ROLE_NOT_FOUND);
       }
-      user.setRoles(roles);
+      user.setRoles(rs);
     }
-    User updatedUser = userRepository.save(user);
-    return userMapper.toUserResponse(updatedUser);
+
+    return userMapper.toUserResponse(userRepository.save(user));
   }
 
+  @Override
   public void delete(Long userId) {
-    String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
+    String currentUser = SecurityContextHolder.getContext().getAuthentication().getName();
     User user =
         userRepository.findById(userId).orElseThrow(() -> new AppEx(ErrorCode.USER_NOT_FOUND));
-    if (user.getUserName().equals(currentUsername)) {
+
+    if (user.getUserName().equals(currentUser)) {
       throw new AppEx(ErrorCode.CANNOT_DELETE_CURRENT_USER);
     }
-
     if (roomBookingRepository.existsByBookedBy(user)) {
       throw new AppEx(ErrorCode.CANNOT_DELETE_USER_IN_USE);
     }
-
     userRepository.deleteById(userId);
   }
 
+  @Override
   @Transactional
   public void deleteMultipleUsers(List<Long> userIds) {
     if (userIds == null || userIds.isEmpty()) {
       throw new AppEx(ErrorCode.INVALID_INPUT);
     }
-    String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
+    String currentUser = SecurityContextHolder.getContext().getAuthentication().getName();
     List<User> users = userRepository.findAllById(userIds);
     if (users.size() != userIds.size()) {
       throw new AppEx(ErrorCode.USER_NOT_FOUND);
     }
-    for (User user : users) {
-      if (user.getUserName().equals(currentUsername)) {
+    for (User u : users) {
+      if (u.getUserName().equals(currentUser)) {
         throw new AppEx(ErrorCode.CANNOT_DELETE_CURRENT_USER);
       }
-      if (roomBookingRepository.existsByBookedBy(user)) {
+      if (roomBookingRepository.existsByBookedBy(u)) {
         throw new AppEx(ErrorCode.CANNOT_DELETE_USER_IN_USE);
       }
     }
     userRepository.deleteAll(users);
   }
 
+  @Override
   public void changePassword(ChangePasswordRequest request) {
-    String username = SecurityContextHolder.getContext().getAuthentication().getName();
+    String currentUser = SecurityContextHolder.getContext().getAuthentication().getName();
     User user =
         userRepository
-            .findByUserName(username)
+            .findByUserName(currentUser)
             .orElseThrow(() -> new AppEx(ErrorCode.USER_NOT_FOUND));
 
     if (!passwordEncoder.matches(request.getOldPassword(), user.getPassword())) {
